docs/versioned_docs/version-0.11.1/quickstart.mdx
---
sidebar_position: 2
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import BrowserWindow from '@site/src/components/BrowserWindow';
import ThemedImage from '@theme/ThemedImage';

# Quickstart

This guide will show you how to integrate Supaglue with your application in less than 10 minutes. By the end, you will have synced data from a sample customer's CRM to your Postgres database and queried it.

<iframe
  width="640"
  height="356"
  src="https://www.loom.com/embed/579b97dc576b4aa3bcd69b0cfa50d613?sid=2417ae3a-4fe1-43a4-b84d-8067216fabaf&hide_owner=true&hide_share=true&hide_title=true&hideEmbedTopBar=true"
  frameborder="0"
  webkitallowfullscreen
  mozallowfullscreen
  allowfullscreen
></iframe>

## 1. Create your Supaglue account

<Tabs>

<TabItem value="supaglue-cloud" label="Supaglue Cloud" default>

Create a free Supaglue Cloud account [here](https://app.supaglue.io/sign-up). After creating your account, you will be directed to the management portal.

</TabItem>

<TabItem value="localhost" label="Localhost">

Clone the Github repo and run the Supaglue stack locally using docker compose:

```shell
git clone -b v0.11.1 https://github.com/supaglue-labs/supaglue.git && cd supaglue
./scripts/create_quickstart_env.sh
docker compose up
```

Once Supaglue is running locally, open the [management portal](http://localhost:3000) in your browser.

The default login credentials are `username: admin` and `password: admin`. Alternatively, use the value of the `ADMIN_PASSWORD` environment variable in the `.env` file if you modified it.

</TabItem>

</Tabs>

## 2. Configure a provider

Go to the "Configuration" tab and configure either a HubSpot or Salesforce provider. We offer Supaglue-hosted providers if you don't have one, or you can read our connector docs to set up your own provider.
:::info
Supaglue-hosted providers are only available for HubSpot and Salesforce at this time, and should only be used in prototyping. You should configure your own provider for any production use cases.
:::

<BrowserWindow url="https://app.supaglue.io/applications/62605dc1-148e-4c53-a850-82e10f71ed23/configuration/providers/crm/salesforce">

![image](/img/salesforce-config-quickstart.png)

</BrowserWindow>

## 3. Configure Postgres destination

Navigate to the "Destinations" tab to configure where you'll sync your customers' CRM data. Select Postgres.

Fill out the connection form and run the following grants (using a user you've created for Supaglue):

```sql
create schema supaglue;

create role supaglue_role;
grant connect on database <your db name> to supaglue_role;
grant all privileges on schema supaglue to supaglue_role;
grant all privileges on all tables in schema supaglue to supaglue_role;
alter default privileges in schema supaglue grant all privileges on tables to supaglue_role;
grant supaglue_role to supaglue_user;
```

<BrowserWindow url="https://app.supaglue.io/applications/62605dc1-148e-4c53-a850-82e10f71ed23/configuration/destinations/postgres">

![image](/img/postgres-form-quickstart.png)

</BrowserWindow>

After setting up your Postgres destination, go back to the CRM configuration and select your Postgres destination from the dropdown.

## 4. Create a sync configuration

Go to the "Sync Configs" tab and click the "plus" button to add a new sync config. Select the provider and destination you just configured and click Save.

<BrowserWindow url="https://app.supaglue.io/applications/62605dc1-148e-4c53-a850-82e10f71ed23/configuration/sync_configs/e8a88575-efdb-4560-ae94-3871e8e51b18">

![image](/img/sync-config-quickstart.png)

</BrowserWindow>

## 5. Create a sample customer

Navigate to the Customers page and click on the plus button to create a sample customer:

- **customer_id**: the primary key you use in your application that uniquely identifies this customer.
- **name**: the name of the customer.
- **email**: the email associated with the customer.

<BrowserWindow url="https://app.supaglue.io/applications/62605dc1-148e-4c53-a850-82e10f71ed23/customers">

![image](/img/customer-config-quickstart.png)

</BrowserWindow>

:::info
A customer is an end-user in your application. You can create a Supaglue customer through the management portal, or programatically when they signup in your application using the [Management API](../api/v2/mgmt#tag/Customers/operation/createCustomer).
:::

## 6. Add Embedded Link to your application

In your frontend application, add an [embedded link](/platform/managed-auth#embedded-links) to let customers authenticate their CRMs with your application using Supaglue.

The format of the link is:

- `{PROTOCOL}{DOMAIN}`/oauth/connect?applicationId=`{APPLICATION_ID}`&customerId=`{CUSTOMER_ID}`&providerName=`{PROVIDER_NAME}`&returnUrl=`{RETURN_URL}`

You can wrap the link with additional styling.

export const IntegrationCard = ({ icon, provider, description, to }) => (
  <div className="mb-4 p-6 max-w-4xl flex flex-col border rounded-md border-slate-200 border-solid items-start">
    <img src={icon} style={{ width: 'auto', height: '36px' }} />
    <div className="font-semibold mt-4">{provider}</div>
    <div className="text-xs mt-2">{description}</div>
    <div
      onClick={() => {
        window.location.href = to;
      }}
      className="border-solid font-semibold cursor-pointer hover:bg-slate-100 mt-6 px-4 py-2 border border-slate-300 rounded-md text-xs"
    >
      Connect
    </div>
  </div>
);

<div className="grid grid-cols-2 gap-4">

<IntegrationCard
  icon="/img/salesforce.svg"
  provider="Salesforce"
  description="Sync your leads in and out of Salesforce"
  to="http://localhost:8080/oauth/connect?applicationId=a4398523-03a2-42dd-9681-c91e3e2efaf4&customerId=external-customer-salesforce&providerName=salesforce&returnUrl=https%3A%2F%2Fdocs.supaglue.com%2Fquickstart%233-query-the-supaglue-unified-api"
/>

<IntegrationCard
  icon="/img/hubspot.svg"
  provider="Hubspot"
  description="Sync your leads in and out of HubSpot"
  to="http://localhost:8080/oauth/connect?applicationId=a4398523-03a2-42dd-9681-c91e3e2efaf4&customerId=external-customer-hubspot&providerName=hubspot&returnUrl=https%3A%2F%2Fdocs.supaglue.com%2Fquickstart%233-query-the-supaglue-unified-api"
/>
</div>

## 7. Create a connection

From your application, click on the Embedded Link you added in step 5. Go through the OAuth flow, which installs your CRM app in a HubSpot or Salesforce account with the requested scopes.

This creates a Supaglue connection, which you can verify by checking the customers page in the management portal. Upon successful connection, CRM common model records will start syncing to your Postgres database.

:::info

In production, this step would be performed by your customer and your developer app would be installed in their CRM account.

:::

<div className="grid grid-cols-2 gap-4 justify-items-center">
<div>
  <ThemedImage
    alt="Salesforce Example App"
    width="100%"
    sources={{
      light: '/img/salesforce_app.png',
      dark: '/img/salesforce_app.png',
    }}
  />
</div>

<div>
  <ThemedImage
    alt="HubSpot Example App"
    width="100%"
    sources={{
      light: '/img/hubspot_app.png',
      dark: '/img/hubspot_app.png',
    }}
  />
</div>
</div>

## 8. Query CRM data from Postgres

Once syncs have completed, you can start querying your customer's CRM data directly from your Postgres.

![image](/img/postgres-sql.png)

## 9. Use the [Action API](https://docs.supaglue.com/api) to create a Contact

```
curl --location 'https://api.supaglue.io/crm/v2/contacts/{CONTACT_ID}' \
--header 'x-customer-id: {CUSTOMER_ID}' \
--header 'x-provider-name: {PROVIDER_NAME}' \
--header 'x-api-key: {API_KEY}' \
--data-raw '{
    "model": {
        "first_name": "Supa",
        "last_name": "Glue",
        "email_addresses": [
            {
                "email_address": "team@supaglue.io",
                "email_address_type": "primary"
            }
        ]
    }
}'
```

- `{CONTACT_ID}` - a contact ID in your customer's CRM
- `{CUSTOMER_ID}` - your customer's ID, e.g. `1234` from step 5
- `{PROVIDER_NAME}` - {`salesforce`|`hubspot`|`pipedrive`|...}
- `{API_KEY}` - your API key obtained from the management portal
